# gst-plugins-custom

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.devel  Dockerfile.jammy  Makefile  README.md
.github/workflows/: cmake.yml  debian.yml  docker.yml
debian/: Dockerfile.dpkg  changelog  control  copyright  gstreamer1.0-plugins-cuda.install  libgstreamer-plugins-cuda1.0-0.install  libgstreamer-plugins-cuda1.0-dev.install  rules
debian/upstream/: metadata
gst-plugins-cuda/: README.md  meson.build  meson_options.txt
gst-plugins-cuda/gst-libs/gst/: meson.build
gst-plugins-cuda/gst-libs/gst/codecparsers/: meson.build
gst-plugins-cuda/gst-libs/gst/codecs/: meson.build
gst-plugins-cuda/gst-libs/gst/cuda/: meson.build
gst-plugins-cuda/gst-libs/gst/cuda/featureextractor/: cudafeaturesarray.c  cudafeaturesarray.h  cudafeaturescell.c  cudafeaturescell.h  cudafeaturesmatrix.c  cudafeaturesmatrix.h  gstmetaalgorithmfeatures.c  gstmetaalgorithmfeatures.h
gst-plugins-cuda/gst-libs/gst/cuda/nvcodec/: cuda-converter.c  cuda-converter.h  gstcudabasefilter.c  gstcudabasefilter.h  gstcudabasetransform.h  gstcudabufferpool.c  gstcudabufferpool.h  gstcudacontext.c  gstcudacontext.h  gstcudaloader.c  gstcudaloader.h  gstcudamemory.c  gstcudamemory.h  gstcudanvrtc.c  gstcudanvrtc.h  gstcudautils.c  gstcudautils.h  gstnvrtcloader.c  gstnvrtcloader.h
gst-plugins-cuda/gst-libs/gst/cuda/of/: gstcudaofalgorithm.cpp  gstcudaofalgorithm.h  gstcudaofhintvectorgridsize.cpp  gstcudaofhintvectorgridsize.h  gstcudaofoutputvectorgridsize.cpp  gstcudaofoutputvectorgridsize.h  gstcudaofperformancepreset.cpp  gstcudaofperformancepreset.h  gstmetaopticalflow.cpp  gstmetaopticalflow.h
gst-plugins-cuda/gst-libs/gst/transcoder/: meson.build
gst-plugins-cuda/scripts/: find-library.py
gst-plugins-cuda/sys/: meson.build
gst-plugins-cuda/sys/nvcodec/: meson.build  plugin.c
gst-plugins-cuda/sys/nvcodec/cudafeatureextractor/: cudafeatureextractorkernels.cu  gstcudafeatureextractor.cpp  gstcudafeatureextractor.h
gst-plugins-cuda/sys/nvcodec/cudaof/: gstcudaof.cpp  gstcudaof.h
gst-plugins-cuda/sys/nvcodec/nvcodec/: gstcudaconvert.c  gstcudaconvert.h  gstcudadownload.h  gstcudafilter.c  gstcudascale.c  gstcudascale.h  gstcudaupload.h  gstcuvidloader.h  gstnvbaseenc.c  gstnvbaseenc.h  gstnvdec.c  gstnvdec.h  gstnvdecoder.c  gstnvdecoder.h  gstnvenc.c  gstnvenc.h  gstnvh264dec.c  gstnvh264enc.c  gstnvh265dec.c  gstnvvp8dec.c  gstnvvp9dec.c
gst-plugins-cuda/tests/: meson.build
gst-plugins-cuda/tests/data/frames/: sample_1080p_h264.0001.raw  sample_1080p_h264.0002.raw
gst-plugins-cuda/tests/src/: CUDAFeaturesArray_UnitTest.cpp  CUDAFeaturesCell_UnitTest.cpp  CUDAFeaturesMatrix_UnitTest.cpp  GstCudaFeatureExtractor_UnitTest.cpp  GstCudaOf_UnitTest.cpp  UnitTests.cpp
